--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -83,7 +83,7 @@
             <td class="govuk-table__cell">
 
                 @if(needsAttention) {
-                <a href="@courseUrl" >@courseStatus</a>
+                <a href="@courseUrl" class="govuk-red bold">@courseStatus</a>
               } else {@courseStatus}
               </td>
             <td class="govuk-table__cell">
