Style list of training locations that need attention on courses

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -113,3 +113,8 @@ $success-green: #00823b;
 .bold {
   @include govuk-typography-weight-bold();
 }
+
+.list-bullet {
+  list-style-type: disc;
+  padding-left: 20px;
+}
