--- a/src/ui/Views/Course/Shared/CourseStatus/_RunningButNeedsAttention.cshtml
+++ b/src/ui/Views/Course/Shared/CourseStatus/_RunningButNeedsAttention.cshtml
@@ -16,7 +16,7 @@
     </p>
     <p>These training locations will not appear in Find postgraduate teacher training:</p>
       <div class="govuk-error-summary__body">
-        <ul class="govuk-list govuk-error-summary__list">
+        <ul class="govuk-list list-bullet bold">
           @foreach(var item in needsAttentions){
             <li>@item</li>
           }
