--- a/src/ui/Views/Course/Shared/CourseStatus/_NewOrNotRunning.cshtml
+++ b/src/ui/Views/Course/Shared/CourseStatus/_NewOrNotRunning.cshtml
@@ -1,25 +1,32 @@
 @model VariantViewModel
+@{
+    var isNew = Model.Course.StatusAsEnum == CourseVariantStatus.New;
+    var isNotRunning = Model.Course.StatusAsEnum == CourseVariantStatus.NotRunning;
+}
 
-<div class="govuk-warning-text govuk-warning-text--inline">
+@if(isNew || isNotRunning){
+
+  <div class="govuk-warning-text govuk-warning-text--inline">
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
   <strong class="govuk-warning-text__text">
-  @if(Model.Course.StatusAsEnum == CourseVariantStatus.New)
+  @if(isNew)
   {
-    <text>This course is new and not yet running.</text>
+      <text>This course is new and not yet running.</text>
   }
-  @if(Model.Course.StatusAsEnum == CourseVariantStatus.NotRunning)
+  @if(isNotRunning)
   {
-    <text>This course is not running.</text>
+      <text>This course is not running.</text>
   }
   </strong>
-</div>
-<p class="govuk-body">
-  @if(Model.Course.StatusAsEnum == CourseVariantStatus.New)
+  </div>
+  <p class="govuk-body">
+  @if(isNew)
   {
-  <text>It won&#8217;t appear online until you have made changes in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>. Set one or more training locations to &ldquo;running&rdquo; and set their Publish value to &ldquo;yes&rdquo;. You must do this so that applicants can apply on UCAS.</text>
+  <text>It won&#8217;t appear online until you have made changes in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>. Set one or more training   locations to &ldquo;running&rdquo; and set their Publish value to &ldquo;yes&rdquo;. You must do this so that applicants can apply on UCAS.</text>
   }
-  @if(Model.Course.StatusAsEnum == CourseVariantStatus.NotRunning)
+  @if(isNotRunning)
   {
-  <text>It won&#8217;t appear online. To publish it you&#8217;ll need to make changes in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>. Set one or more training locations to &ldquo;running&rdquo; and set their Publish value to &ldquo;yes&rdquo;.</text>
+  <text>It won&#8217;t appear online. To publish it you&#8217;ll need to make changes in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>. Set   one or more training locations to &ldquo;running&rdquo; and set their Publish value to &ldquo;yes&rdquo;.</text>
   }
-</p>
+  </p>
+}
