Style visited state for govuk-red utility class

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -105,7 +105,8 @@ $success-green: #00823b;
 // Utility classes
 .govuk-red {
   &,
-  &:link {
+  &:link,
+  &:visited {
     color: govuk-colour("red");
   }
 }
