Update style for school status when it needs attention

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -119,3 +119,9 @@ $success-green: #00823b;
   list-style-type: disc;
   padding-left: 20px;
 }
+
+@include govuk-media-query($from: desktop) {
+  .govuk-\!-margin-top-4--l {
+    margin-top: govuk-spacing(4) !important;
+  }
+}
