--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -105,14 +105,18 @@
               }
               @if (!string.IsNullOrEmpty(@site.Status))
               {
-                <dt>Status:</dt>
-                <dd>
-                  @if(school.GetSiteStatus() == "Needs attention in UCAS") {
-                    <text>Needs attention in UCAS: This location is set to ‘running’ but candidates can’t apply to it. To allow candidates to view and apply to this location, you must set its publish value to ‘Yes’ in UCAS web-link.</text>
-                  } else{
-                    @school.GetSiteStatus()
-                  }
-                </dd>
+                @if(school.GetSiteStatus() == "Needs attention in UCAS") {
+                  <dt class="govuk-!-margin-top-4">Status:</dt>
+                  <dd class="govuk-!-margin-top-0 govuk-!-margin-top-4--l">
+                    <text>
+                      <strong>Needs attention in UCAS</strong>
+                      <p>This location is set to ‘running’ but candidates can’t apply to it. To allow candidates to view and apply to this location, you must set its publish value to ‘Yes’ in UCAS web-link.</p>
+                    </text>
+                  </dd>
+                } else {
+                  <dt>Status:</dt>
+                  <dd>@school.GetSiteStatus()</dd>
+                }
               }
               <dt>Vacancies:</dt>
               <dd>@site.GetVacancyStatus()</dd>
