--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -9,7 +9,7 @@
   var routeData = courseEnrichment.RouteData;
 }
 
-<a href="@Url.Action("Show", "Organisation", new {ucasCode = Model.Course.UcasCode})" class="govuk-back-link">Back</a>
+<a href="@Url.Action("Show", "Organisation", new {instCode = Model.Course.InstCode})" class="govuk-back-link">Back</a>
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
   @await Html.PartialAsync("~/Views/Shared/_Alerts.cshtml")
@@ -65,9 +65,9 @@
               <dt>Name:</dt>
               <dd>@Model.Course.Name</dd>
             }
-            @if (!string.IsNullOrEmpty(@Model.Course.UcasCode)) {
+            @if (!string.IsNullOrEmpty(@Model.Course.InstCode)) {
               <dt>Training provider code:</dt>
-              <dd>@Model.Course.UcasCode</dd>
+              <dd>@Model.Course.InstCode</dd>
             }
             @if (!string.IsNullOrEmpty(@Model.Course.ProgrammeCode)) {
               <dt>Training programme code:</dt>
