--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -7,7 +7,7 @@
   var train_with_disability = ViewData.ModelState["TrainWithDisability"] != null && ViewData.ModelState["TrainWithDisability"].Errors.Any();
 }
 
-<a href="@Url.Action("Details", "Organisation", new {ucasCode = Model.InstCode})" class="govuk-back-link">Back</a>
+<a href="@Url.Action("Details", "Organisation", new {instCode = Model.InstCode})" class="govuk-back-link">Back</a>
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
   @await Html.PartialAsync("~/Views/Shared/_Alerts.cshtml")
