--- a/src/ui/Views/Organisation/Index.cshtml
+++ b/src/ui/Views/Organisation/Index.cshtml
@@ -14,7 +14,7 @@
         {
           <li>
             <h2 class="govuk-heading-m">
-              <a href="@Url.Action("Show", "Organisation", new {ucasCode = organisation.UcasCode})" class="govuk-link">@organisation.OrganisationName</a>
+              <a href="@Url.Action("Show", "Organisation", new {instCode = organisation.UcasCode})" class="govuk-link">@organisation.OrganisationName</a>
               <span class="govuk-body govuk-!-font-weight-regular govuk-!-display-block">@organisation.TotalCourses course@(organisation.TotalCourses == 1 ? "" : "s")</span>
             </h2>
           </li>
