--- a/src/ui/Views/Organisation/Index.cshtml
+++ b/src/ui/Views/Organisation/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">Organisations</h1>
       <ul class="govuk-list">
-        @foreach (var organisation in Model.Oganisations)
+        @foreach (var organisation in Model.Organisations)
         {
           <li>
             <h2 class="govuk-heading-m">
