--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -73,7 +73,7 @@
         {
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">
-              <a href="@Url.Action("show", "course", new {instCode = Model.InstCode, accreditingProviderId = course.AccreditingProviderId, courseCode = course.CourseCode})" class="govuk-link">@course.Name (@course.CourseCode)</a>
+              <a href="@Url.Action("show", "course", new {instCode = Model.InstCode, accreditingInstCode = course.AccreditingProviderId, courseCode = course.CourseCode})" class="govuk-link">@course.Name (@course.CourseCode)</a>
             </td>
             <td class="govuk-table__cell">@course.TypeDescription</td>
             <td class="govuk-table__cell">@course.GetCourseStatus()</td>
