--- a/src/ui/Views/Shared/CopyCourseContent.cshtml
+++ b/src/ui/Views/Shared/CopyCourseContent.cshtml
@@ -1,7 +1,7 @@
 @{
   IEnumerable<GovUk.Education.ManageCourses.ApiClient.Course> copyables = ViewBag.CopyableCourses as IEnumerable<GovUk.Education.ManageCourses.ApiClient.Course> ?? new List<GovUk.Education.ManageCourses.ApiClient.Course>();
-  var accreditedCopyables = copyables.GroupBy(x => x.AccreditingProviderId).Where(x => !string.IsNullOrEmpty(x.Key) && x.Any());
-  var selfAccreditedCopyables = copyables.GroupBy(x => x.AccreditingProviderId).SingleOrDefault(x => string.IsNullOrEmpty(x.Key));
+  var accreditedCopyables = copyables.GroupBy(x => x.AccreditingInstitution?.InstCode).Where(x => !string.IsNullOrEmpty(x.Key) && x.Any());
+  var selfAccreditedCopyables = copyables.GroupBy(x => x.AccreditingInstitution?.InstCode).SingleOrDefault(x => string.IsNullOrEmpty(x.Key));
 }
 
 @if(!copyables.Any())
@@ -28,7 +28,7 @@ else
         }
         @foreach(var copyableSet in accreditedCopyables)
         {
-          <optgroup label="@copyableSet.FirstOrDefault()?.AccreditingProviderName">
+          <optgroup label="@copyableSet.FirstOrDefault()?.AccreditingInstitution?.InstName">
             @foreach(var copyable in copyableSet)
             {
               <option value="@copyable.CourseCode">@copyable.Name (@copyable.CourseCode)</option>
