--- a/src/ui/Views/Organisation/Index.cshtml
+++ b/src/ui/Views/Organisation/Index.cshtml
@@ -10,12 +10,12 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">Organisations</h1>
       <ul class="govuk-list">
-        @foreach (var organisation in Model.Organisations)
+        @foreach (var institutionSummary in Model.InstitutionSummaries)
         {
           <li>
             <h2 class="govuk-heading-m">
-              <a href="@Url.Action("Show", "Organisation", new {instCode = organisation.UcasCode})" class="govuk-link">@organisation.OrganisationName</a>
-              <span class="govuk-body govuk-!-font-weight-regular govuk-!-display-block">@organisation.TotalCourses course@(organisation.TotalCourses == 1 ? "" : "s")</span>
+              <a href="@Url.Action("Show", "Organisation", new {instCode = institutionSummary.InstCode})" class="govuk-link">@institutionSummary.InstName</a>
+              <span class="govuk-body govuk-!-font-weight-regular govuk-!-display-block">@institutionSummary.TotalCourses course@(institutionSummary.TotalCourses == 1 ? "" : "s")</span>
             </h2>
           </li>
         }
