--- a/src/ui/Views/_ViewImports.cshtml
+++ b/src/ui/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-@using GovUk.Education.ManageCourses.ApiClient
+@using GovUk.Education.ManageCourses.Api.Model
+@using GovUk.Education.ManageCourses.Domain.Models
+
 @using GovUk.Education.ManageCourses.Ui.ViewModels
 @using GovUk.Education.ManageCourses.Ui.Helpers
 @using GovUk.Education.ManageCourses.Ui.ViewModels.Enums
