--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -18,7 +18,7 @@
 }
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
-  @Html.Partial("~/Views/Organisation/Shared/RequestAccessSuccess.cshtml")
+  @await Html.PartialAsync("~/Views/Organisation/Shared/RequestAccessSuccess.cshtml")
   @await Html.PartialAsync("~/Views/Shared/_Alerts.cshtml")
 
   <div class="govuk-grid-row">
@@ -82,10 +82,10 @@
               {
                 @switch(course.EnrichmentWorkflowStatus)
                 {
-                  case GovUk.Education.ManageCourses.ApiClient.EnumStatus.Draft:
+                  case EnumStatus.Draft:
                     <div class="govuk-tag govuk-tag--inline govuk-tag--draft">draft</div>
                     break;
-                  case GovUk.Education.ManageCourses.ApiClient.EnumStatus.Published:
+                  case EnumStatus.Published:
                     <div class="govuk-tag govuk-tag--inline govuk-tag--published">published</div>
                     break;
                   default:
