--- a/src/ui/Views/Organisation/Index.cshtml
+++ b/src/ui/Views/Organisation/Index.cshtml
@@ -14,7 +14,7 @@
         {
           <li>
             <h2 class="govuk-heading-m">
-              <a href="@Url.Action("Show", "Organisation", new {instCode = providerSummary.ProviderCode})" class="govuk-link">@providerSummary.ProviderName</a>
+              <a href="@Url.Action("Show", "Organisation", new {providerCode = providerSummary.ProviderCode})" class="govuk-link">@providerSummary.ProviderName</a>
               <span class="govuk-body govuk-!-font-weight-regular govuk-!-display-block">@providerSummary.TotalCourses course@(providerSummary.TotalCourses == 1 ? "" : "s")</span>
             </h2>
           </li>
