--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -106,7 +106,7 @@
         @await Html.PartialAsync("shared/_RequirementsCourseOverview", Model.CourseEnrichment)
       }
 
-        <div class="course-parts__item">
+        <div class="course-parts__item course-parts__item--borderless">
           <h2 class="course-parts__title">Training locations</h2>
           @foreach (var site in Model.Course.Sites.Where(x => x.Status != "S"))
           {
