--- a/src/ui/Assets/Styles/patterns/_course-parts.scss
+++ b/src/ui/Assets/Styles/patterns/_course-parts.scss
@@ -16,6 +16,12 @@
     }
 
     .govuk-summary-list {
+      &__key {
+        .govuk-link {
+          display: block;
+        }
+      }
+
       &__value {
         overflow: hidden;
         text-overflow: ellipsis;
@@ -57,7 +63,6 @@
       &--error {
         color: $govuk-error-colour;
         border-left: 5px solid $govuk-error-colour;
-        padding-bottom: 0;
         padding-left: govuk-spacing(2);
         padding-top: govuk-spacing(1);
 
