Drop border and padding from top course part on course overview page

--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -23,7 +23,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <div class="course-parts">
-        <div class="course-parts__item">
+        <div class="course-parts__item course-parts__item--borderless">
           <h2 class="course-parts__title">Information from UCAS</h2>
 
           @if(Model.Course.StatusAsEnum != CourseRunningStatus.Running)
